change styling of body to fix for scrolling on safari in phones

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,12 +3,12 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
-  height: 100vh;
+  height: -webkit-fill-available;
   margin: 0;
 }
 
 #root {
-  height: 100%;
+  height: 100vh;
 }
 
 @keyframes fade-in {
